<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="ActivityLoginBinding">
        <variable
            name="loginViewModel"
            type="com.uo226321.joel.gymnastics.viewmodel.LoginViewModel"/>
    </data>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppThemeLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Login progress -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/playstoreicon" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:text="@={loginViewModel.user}"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:text="@={loginViewModel.password}"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_log_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:elevation="@dimen/nav_header_vertical_spacing"
                android:text="@string/action_log_in"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:onClick="@{loginViewModel.onLoginButtonClicked}"/>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:elevation="@dimen/text_margin"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:onClick="@{loginViewModel.onRegisterButtonClicked}"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
</layout>