<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="ActivityVerifyBinding">
        <variable
            name="verifyViewModel"
            type="com.uo226321.joel.gymnastics.viewmodel.VerifyViewModel"/>
    </data>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/cardexample"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/idcard" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/form_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verifycard"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/numbercard"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/numbercard"
                android:inputType="number"
                android:text="@={verifyViewModel.numberCard}"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verifykey"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/key1"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Parte 1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:maxLength="3"
                    android:text="@={verifyViewModel.key1}"/>

                <EditText
                    android:id="@+id/key2"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Parte 2"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:maxLength="3"
                    android:text="@={verifyViewModel.key2}"/>

                <EditText
                    android:id="@+id/key3"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Parte 3"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:maxLength="3"
                    android:text="@={verifyViewModel.key3}"/>

                <EditText
                    android:id="@+id/key4"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Parte 4"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:maxLength="3"
                    android:text="@={verifyViewModel.key4}"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/continueVerify"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/continueVer"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:onClick="@{verifyViewModel.onVerifyButtonClicked}"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


</ScrollView>
</layout>